plugins {
    id 'pl.allegro.tech.build.axion-release' version '1.18.17'
    id 'groovy'
    id 'io.github.gradle-nexus.publish-plugin' version '2.0.0'
}

group = 'org.rundeck.plugins'

ext.publishName = "Vault Storage ${project.version}"
ext.githubSlug = 'rundeck-plugins/vault-storage'
ext.developers = [
        [id: 'gschueler', name: 'Greg Schueler', email: 'greg@rundeck.com']
]

ext.rundeckVersion='6.0.0-alpha1-20260407'
defaultTasks 'clean','build'
apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'pl.allegro.tech.build.axion-release'
apply plugin: 'groovy'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
    withSourcesJar()
    withJavadocJar()
}
ext.rundeckPluginVersion= '1.2'

/**
 * Set this to a comma-separated list of full classnames of your implemented Rundeck
 * plugins.
 */
ext.pluginClassNames='io.github.valfadeev.rundeck.plugin.vault.VaultStoragePlugin'

scmVersion {
    ignoreUncommittedChanges = false
    tag {
        prefix = ''           // NO "v" prefix - see PLUGIN_TAGGING_ARCHITECTURE.md
        versionSeparator = ''
    }
    versionCreator 'simple'  // Use simple version creator (just tag name)
}

project.version = scmVersion.version  // Dynamic version from git tag

repositories {
    mavenLocal()
    maven {
        name = 'Central Portal Snapshots'
        url = 'https://central.sonatype.com/repository/maven-snapshots/'
        content {
            includeGroup('org.rundeck')
        }
    }
    maven {
        name = 'Central Portal Snapshots'
        url = 'https://central.sonatype.com/repository/maven-snapshots/'
        
        // Only search this repository for org.rundeck snapshots
        content {
            includeGroup('org.rundeck')
        }
    }
    mavenCentral()
}

configurations{
    //declare custom pluginLibs configuration to include only libs for this plugin
    pluginLibs

    //declare compile to extend from pluginLibs so it inherits the dependencies
    implementation{
        extendsFrom pluginLibs
    }
}

dependencies {
    // add any third-party jar dependencies you wish to include in the plugin
    // using the `pluginLibs` configuration as shown here:

    pluginLibs group: 'io.github.jopenlibs', name: 'vault-java-driver', version: '6.2.0', ext: 'jar'


    compileOnly group: 'org.rundeck', name: 'rundeck-core', version: rundeckVersion
    testImplementation group: 'org.rundeck', name: 'rundeck-core', version: rundeckVersion

    // Add secure commons-lang3 to provide alternative to vulnerable commons-lang 2.6
    implementation 'org.apache.commons:commons-lang3:3.20.0'
    
    testImplementation(
            [group: 'junit', name: 'junit', version: '4.12', ext: 'jar'],
            [group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3', ext: 'jar'],
            [group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3', ext: 'jar'],
            [group: 'org.mockito', name: 'mockito-core', version: '4.0.0', ext: 'jar'],
            [group: 'net.bytebuddy', name: 'byte-buddy', version: '1.12.1'],
            [group: 'net.bytebuddy', name: 'byte-buddy-agent', version: '1.12.1'],
            [group: 'org.objenesis', name: 'objenesis', version: '3.2']

    )
    testImplementation "org.apache.groovy:groovy-all:4.0.29"
    testImplementation "org.spockframework:spock-core:2.4-groovy-4.0"
    testImplementation "cglib:cglib-nodep:3.3.0"

}

configurations.all {
    resolutionStrategy {
        // Replace vulnerable commons-lang with secure commons-lang3
        dependencySubstitution {
            substitute module('commons-lang:commons-lang') using module('org.apache.commons:commons-lang3:3.17.0')
        }
    }
}

// task to copy plugin libs to output/lib dir
task copyToLib(type: Copy) {
    into "$buildDir/output/lib"
    from configurations.pluginLibs
}


jar {
    from "$buildDir/output"
    manifest {
        def libList = configurations.pluginLibs.collect{'lib/'+it.name}.join(' ')
        attributes 'Rundeck-Plugin-Name' : 'Vault Storage'
        attributes 'Rundeck-Plugin-Description' : 'This is a Storage Backend plugin for storing Key Store data in Vault.'
        attributes 'Rundeck-Plugin-Rundeck-Compatibility-Version': '3.0.2+'
        attributes 'Rundeck-Plugin-Tags': 'java,storage,vault'
        attributes 'Rundeck-Plugin-License': 'MIT'
        attributes 'Rundeck-Plugin-Source-Link': 'https://github.com/rundeck-plugins/vault-storage'
        attributes 'Rundeck-Plugin-Target-Host-Compatibility': 'all'
        attributes 'Rundeck-Plugin-Author': 'Rundeck, Inc.'
        attributes 'Rundeck-Plugin-Classnames': pluginClassNames
        attributes 'Rundeck-Plugin-File-Version': version
        attributes 'Rundeck-Plugin-Version': rundeckPluginVersion, 'Rundeck-Plugin-Archive': 'true'
        attributes 'Rundeck-Plugin-Libs': "${libList}"
        attributes 'Main-Class': "io.github.valfadeev.rundeck.plugin.vault.VaultStoragePlugin"
        attributes 'Class-Path': "${libList} lib/rundeck-core-${rundeckVersion}.jar"
    }
}
//set jar task to depend on copyToLib
jar.dependsOn(copyToLib)

test {
    useJUnitPlatform()
    
    // Java 17+ module access
    jvmArgs = [
        '--add-opens=java.base/java.lang=ALL-UNNAMED',
        '--add-opens=java.base/java.util=ALL-UNNAMED',
        '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
    ]
}

nexusPublishing {
    packageGroup = 'org.rundeck.plugins'
    repositories {
        sonatype {
            nexusUrl.set(uri("https://ossrh-staging-api.central.sonatype.com/service/local/"))
            snapshotRepositoryUrl.set(uri("https://central.sonatype.com/repository/maven-snapshots/"))
        }
    }
}

apply from: "${rootDir}/gradle/publishing.gradle"
